[package]
name = "raft"
version = "0.1.0"
authors = ["yeluyang <ylycpg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.14"
rand = "0.8.3"

async-std = "1.9.0"
async-trait = "0.1.50"
futures = "0.3.15"
